--- a/rules/REQUEST-943-APPLICATION-ATTACK-SESSION-FIXATION.json
+++ b/rules/REQUEST-943-APPLICATION-ATTACK-SESSION-FIXATION.json
@@ -3,15 +3,13 @@
     "id": "943011",
     "pattern": "1",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
-    "action": "block",
+    "score": 0,
+    "action": "pass",
     "phase": 1,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
@@ -22,15 +20,13 @@
     "id": "943012",
     "pattern": "1",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
-    "action": "block",
+    "score": 0,
+    "action": "pass",
     "phase": 2,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
@@ -74,18 +70,16 @@
     "category": "SESSION_FIXATION"
   },
   {
-    "id": "custom-950098",
+    "id": "custom-278008",
     "pattern": "^(?:ht|f)tps?://(.*?)/",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
+    "score": 0,
     "action": "block",
     "phase": 2,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 2,
@@ -93,18 +87,16 @@
     "category": "SESSION_FIXATION"
   },
   {
-    "id": "custom-397446",
+    "id": "custom-762300",
     "pattern": "%{request_headers.host}",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
+    "score": 0,
     "action": "block",
     "phase": 2,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
@@ -126,22 +118,20 @@
     ],
     "enabled": true,
     "chain_level": 1,
-    "parent_rule_id": "custom-397446",
+    "parent_rule_id": "custom-762300",
     "category": "SESSION_FIXATION"
   },
   {
-    "id": "custom-597835",
+    "id": "custom-788570",
     "pattern": "0",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
+    "score": 0,
     "action": "block",
     "phase": 2,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
@@ -152,15 +142,13 @@
     "id": "943013",
     "pattern": "2",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
-    "action": "block",
+    "score": 0,
+    "action": "pass",
     "phase": 1,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
@@ -171,15 +159,13 @@
     "id": "943014",
     "pattern": "2",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
-    "action": "block",
+    "score": 0,
+    "action": "pass",
     "phase": 2,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
@@ -190,15 +176,13 @@
     "id": "943015",
     "pattern": "3",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
-    "action": "block",
+    "score": 0,
+    "action": "pass",
     "phase": 1,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
@@ -209,15 +193,13 @@
     "id": "943016",
     "pattern": "3",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
-    "action": "block",
+    "score": 0,
+    "action": "pass",
     "phase": 2,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
@@ -228,15 +210,13 @@
     "id": "943017",
     "pattern": "4",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
-    "action": "block",
+    "score": 0,
+    "action": "pass",
     "phase": 1,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
@@ -247,15 +227,13 @@
     "id": "943018",
     "pattern": "4",
     "msg": "SESSION_FIXATION Detected",
-    "score": 5,
-    "action": "block",
+    "score": 0,
+    "action": "pass",
     "phase": 2,
     "paranoia_level": 1,
     "targets": "",
     "transformations": [
-      "none",
-      "urlDecodeUni",
-      "lowercase"
+      "none"
     ],
     "enabled": true,
     "chain_level": 0,
